--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": ">=7.4",
-        "imedge/config": "^0.2"
+        "imedge/config": ">=0.3"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10 | ^2",
